# sonarlint-visualstudio-sampleprojects

./: .gitignore  README.md  Secrets.txt
bound/sonarcloud/SLVS_Samples_Bound_VS2019/: AnalyzeSC.bat  SLVS_Bound_VS2019.sln
standalone/vs2015/: SLVS_Samples_Standalone_VS2015.sln  SLVS_Samples_VS2015.sln
standalone/vs2015/CSharp_OldStyleProject_ConsoleApp/: CSharp_OldStyleProject_ConsoleApp.csproj  Program.cs
standalone/vs2015/Cpp_Win32Project_VS2015/: Cpp_Win32Project_VS2015.rc  Cpp_Win32Project_VS2015.vcxproj  Cpp_Win32Project_VS2015.vcxproj.filters  ReadMe.txt  Resource.h
standalone/vs2017/: SLVS_Samples_VS2017.sln
standalone/vs2017/CMake/VS2017_CMakeProject1/VS2017_CMakeProject1/: CMakeLists.txt  VS2017_CMakeProject1.cpp  VS2017_CMakeProject1.h
standalone/vs2017/Cpp_WindowsProject_VS2017/: Cpp_WindowsProject_VS2017.cpp  Cpp_WindowsProject_VS2017.rc  Cpp_WindowsProject_VS2017.vcxproj  Cpp_WindowsProject_VS2017.vcxproj.filters
standalone/vs2017/NormalSolution/: SLVS_Samples_Standalone_VS2017.sln
standalone/vs2017/VB_OldStyleProject_ClassLibrary/: Class1.vb
standalone/vs2019/: SLVS_Samples_VS2019.sln
standalone/vs2019/CMake/: CMakeLists.txt  CMakeSettings.json
standalone/vs2019/CMake/VS2019_CMakeProject1/VS2019_CMakeProject1/: CMakeLists.txt  VS2019_CMakeProject1.cpp  VS2019_CMakeProject1.h
standalone/vs2019/Cpp_WindowsProject_VS2019/: Cpp_WindowsProject_VS2019.rc  Cpp_WindowsProject_VS2019.vcxproj  Cpp_WindowsProject_VS2019.vcxproj.filters
standalone/vs2019/NormalSolution/: SLVS_Samples_Standalone_VS2019.sln
(+100 files in other folders)
