# CMakeList.txt : CMake project for VS2019_CMakeProject1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (VS2019_CMakeProject1 "VS2019_CMakeProject1.cpp" "VS2019_CMakeProject1.h" "TicTacToe.cpp" "QuickFixes.cpp")

# TODO: Add tests and install targets if needed.
